# src/controllers/record.controller.ts
@@ -30,24 +30,29 @@ export class RecordController {
     isArray: true,
   })
   @Get('/records')
-  async find(@QueryParam('opt') opt?: FindManyOptions<Record>): Promise<Record[]> {
-    return this.recordRepository.find(opt);
+  async find(@QueryParam('opt') opt?: FindManyOptions<Record>): Promise<{ count: number; results: Record[] }> {
+    const count = await this.recordRepository.count(opt);
+    const results = await this.recordRepository.find(opt);
+    return {
+      count,
+      results,
+    };
   }
 
   @OpenAPI({ summary: 'Return a count of records by opt' })
-  @ResponseSchema(Record, {
-    isArray: true,
-  })
+  @ResponseSchema(Number)
   @Get('/records/count')
-  async count(@QueryParam('opt') opt: FindOptionsWhere<Record>): Promise<number> {
-    return this.recordRepository.countBy(opt);
+  async count(@QueryParam('opt') opt?: FindOptionsWhere<Record>): Promise<number> {
+    const count = await this.recordRepository.countBy(opt);
+    return count;
   }
 
   @OpenAPI({ summary: 'Return a record by id' })
   @ResponseSchema(Record)
   @Get('/records/:id')
-  async findById(@Param('id') id: number): Promise<Record> {
-    const result = await this.recordRepository.findOneOrFail({ where: { id } });
+  async findById(@Param('id') id: number, @QueryParam('opt') opt?: FindOptionsWhere<Record>): Promise<Record> {
+    await this.recordRepository.existOneOrFail({ id });
+    const result = await this.recordRepository.findOne(Object.assign({ where: { id } }, opt));
     return result;
   }
 
@@ -56,6 +61,7 @@ export class RecordController {
   @UseBefore(validationMiddleware(Record, 'body', ['update']))
   @Patch('/records/:id')
   async updateById(@Param('id') id: number, @Body() body: Record): Promise<null> {
+    await this.recordRepository.existOneOrFail(id);
     await this.recordRepository.update(id, body);
     return null;
   }
@@ -73,6 +79,7 @@ export class RecordController {
   @UseBefore(validationMiddleware(Record, 'body', ['update']))
   @Patch('/records')
   async update(@QueryParam('opt') opt: FindOptionsWhere<Record>, @Body() body: Record): Promise<null> {
+    await this.recordRepository.existOneOrFail(opt);
     await this.recordRepository.update(opt, body);
     return null;
   }
@@ -95,14 +102,14 @@ export class RecordController {
     return null;
   }
 
-  // 下方仅为测试需要
+  // 下方仅是模拟业务需要
 
   @OpenAPI({ summary: 'Return a list of records by dto' })
   @ResponseSchema(Record, {
     isArray: true,
   })
   @UseBefore(validationMiddleware(GetRecordsTestDto, 'query'))
-  @Get('/records/like')
+  @Get('/recordsByLike')
   async getRecordsByLike(@QueryParams() queryParams: GetRecordsTestDto): Promise<Record[]> {
     return this.recordService.getRecordsByLike(queryParams);
   }
